--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -5,7 +5,7 @@
     <% end %>
   </div>
   <div class="text-center px-4 fs-4">
-    <h2>Add Transaction</h2>
+    <h2 class= "head1">Add Transaction</h2>
   </div>
   </div>
 <%= form_with(model: @transaction, url: category_transactions_path(@category), local: true) do |f| %>
